@startuml
'https://plantuml.com/class-diagram

abstract class GiaiVeSo {
    # String tenGiai
    # List<String> boSoTrungThuong
    + {abstract} GiaiVeSo giaiKeTiep(GiaiVeSo giaiVeSo)
    + {abstract} String doVeSo(String so)
}

class GiaiTam
class GiaiThongThuong

GiaiVeSo <|-- GiaiTam
GiaiVeSo <|-- GiaiThongThuong
GiaiThongThuong --> GiaiVeSo: "giaiKeTiep"

@enduml